--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arya Anggadipa Manova</title>
-    <link rel='stylesheet' type='text/css' media='screen' href='studikasus.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='index.css'>
     <link rel="icon" type="image/x-icon" href="20240926_133004.jpg">
     <style>
         .round {
