--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <center>
         <div class="round">
-            <img src="20240926_133004.jpg" height="100px" width=auto/>
+            <img src="https://aryaanggadipa.github.io/20240926_133004.jpg" height="100px" width=auto/>
         </div>
         <h1><u>Arya Anggadipa Manova</u></h1>
         <p style="font-size:20px;"><b><u>1202223246</u></b></p>
@@ -26,8 +26,8 @@
         
         <!-- <div class="round"> -->
             <h2>
-                <a href="https://www.instagram.com/aanggadipa_/"><img src="ig.png" height="40px" width=auto/></a>
-                <a href="https://www.linkedin.com/in/arya-anggadipa-manova-00125928b/"><img src="linkedin.png" height="40px" width=auto/></a>
+                <a href="https://www.instagram.com/aanggadipa_/"><img src="https://aryaanggadipa.github.io/ig.png" height="40px" width=auto/></a>
+                <a href="https://www.linkedin.com/in/arya-anggadipa-manova-00125928b/"><img src="https://aryaanggadipa.github.io/linkedin.png" height="40px" width=auto/></a>
             </h2>
         <!-- </div> -->
     </center>
