--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arya Anggadipa Manova</title>
     <link rel='stylesheet' type='text/css' media='screen' href='index.css'>
-    <link rel="icon" href="iseng.png">
+    <link rel="icon" href="icon.png">
     <style>
         .round {
             border-radius: 500%;
